--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "example:server": "ts-node ./example/server/index.ts"
+    "example:server": "node --experimental-specifier-resolution=node --loader ts-node/esm ./example/server/index.ts"
   },
   "dependencies": {
     "isomorphic-unfetch": "^3.1.0"
