--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@types/jest": "^28.1.2",
+    "@types/node-fetch": "^2.6.2",
     "dotenv": "^16.0.1",
     "husky": "^8.0.1",
     "jest": "^28.1.0",
@@ -14,6 +16,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-typescript2": "^0.31.2",
     "semantic-release": "^19.0.2",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.7.0",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
@@ -69,6 +72,7 @@
     "semantic-release": "semantic-release",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
+    "test-verbose": "jest --verbose",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
     "example:server": "node --experimental-specifier-resolution=node --loader ts-node/esm ./example/server/index.ts"
